# webcode-tk

./: .copilot-instructions.md  .gitignore  .pre-commit-config.yaml  404.html  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: ci-testing.yml  gh-pages.yml  pre-release.yml  release.yml
docs/: explanation.md  index.md  reference.md  tutorials.md
docs/reference/: animation_tools.md  cascade_tools.md  color_keywords.md  color_tools.md  colortools.md  contrast_tools.md  css.md  html.md  (+6 more)
explanation/: index.html
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: cascade_tools_contrast_algorithm.md  test_animation_tools.py  test_cascade_tools.py  test_color_keywords.py  test_color_tools.py  test_colortools.py  test_contrast_direct_text.py  test_contrast_edge_cases.py  test_contrast_font_conversion.py  test_contrast_helpers.py  test_contrast_inheritance.py  test_contrast_integration.py  test_contrast_tools.py  test_css.py  test_css_tools.py  test_css_variables.py  test_font_tools.py  test_html.py  test_html_tools.py  test_normalize_css.py  test_project_errors.py  test_project_refactor.py  test_utils.py  test_ux_tools.py  test_validator.py  test_validator_tools.py  test_webcode_tk.py
tutorials/: index.html
webcode_tk/: __init__.py  _style_inheritance.py  animation_tools.py  cascade_tools.py  color_keywords.py  color_tools.py  colortools.py  contrast_tools.py  contrast_tools_claude4_5_prompt.txt  css.py  css_tools.py  font_tools.py  html.py  html_tools.py  ux_tools.py  validator.py  validator_tools.py
(+85 files in other folders)
