[tool.poetry]
name = "webcode-tk"
version = "0.1.0"
description = ""
authors = ["hundredvisionsguy <cwinikka@gmail.com>"]
keywords = ["html", "validation", "css", ]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/HundredVisionsGuy/webcode-tk"
repository = "https://github.com/HundredVisionsGuy/webcode-tk"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
file-clerk = "^1.0.9"
lxml = "^4.9.1"
requests = "^2.28.1"
MechanicalSoup = "^1.1.0"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "*"
mkgendocs = "*"
pytest-cov = "*"
mkdocs-material = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
